# Tunka_Grande

./: README.md
Qt/CalibGrande/: CalibGrande.pro  README.md  calibration.cpp  calibration.h  configuration.cpp  configuration.h  global.h  main.cpp  mainwindow.cpp  mainwindow.h  runprog.cpp  runprog.h
prog/TGrande/: CMakeLists.txt  main.cpp
prog/TGrande/include/: globals.h  grande.h  hist.h
prog/TGrande/src/: grande.cpp  hist.cpp
prog/TakeMaxAmpl/: CMakeLists.txt  main.cpp  read_data.cpp  read_data.hpp  tmp.root
